=== 3.5.3

* Bug fixes
  * When including a file lossily force-transcode it to the output encoding
    instead of crashing to preserve as much content as possible.  Ruby Bug
    #4376 by Yui NARUSE.
  * Work around inconsistent encoding result from String#sub!.  Related to
    Ruby Bug #4376.
  * Work around inconsistent encoding result from String#[]=.  Related to Ruby
    Bug #4376.

=== 3.5.2 / 2010-02-04

* Deprecations
  * RDoc::Context::Section#sequence is now deprecated.  Use
    RDoc::Context::Section#aref instead.

* Bug fixes
  * Fixed syntax highlighting CSS class generation.  Reported by Daniel
    Bretoi.
  * Fixed ri for methods with aliases.  Pull Request #15 by Sven Riedel.
  * Added windows-specific test for test_check_files.
  * Darkfish now supports sections.  Template and generator author see
    RDoc::Context#each_section to add section support.  RubyForge Bug #26883
    by Jeff Hodges.
  * Fixed post-install message for Ruby 1.9.2 users.
  * Set required ruby version to >= 1.8.7.

=== 3.5.1 / 2010-01-30

* Bug fixes
  * Fixed some typos.  Pull request #13 by R.T. Lechow.
  * Ensure an RDoc::Stats is created in #parse_files.  Fixes documentation for
    railties which has no files.  Reported by Aaron Patterson

=== 3.5 / 2010-01-29

* Minor enhancements
  * RDoc::Parser::C looks for rb_scan_args and fills in RDoc::AnyMethod#params
    appropriately.  This may provide useful information if the author did not
    provide a call-seq.
  * RDoc::Parser::C now records the function name for methods implemented in
    C.
  * RDoc now records file and byte offset information for methods.
* Bug fixes
  * Locations of module aliases are now recorded.
  * RDoc::Parser::C finds method bodies better now.
  * Fixed further locations where output encoding was not preserved.  Bug #11
    by Vít Ondruch, RubyForge bug #28791 by Dzmitry Prakapenka.
  * Fixed display of numeric lists on the index page and file pages.  Bug #12
    by tobijk.